// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogServer: get /logs (sqlite) > filters logs by experiment id (csv) 1`] = `
"type,experiment_name,run_name,run_status,value
log-type,log-test-experiment,log-test-run,running,1
test-type,log-test-experiment,log-test-run,running,2
log-type,log-test-experiment,other-run-1,running,3
test-type,log-test-experiment,other-run-1,running,4
"
`;

exports[`LogServer: get /logs (sqlite) > filters logs by experiment id (json) 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "value": 1,
        },
      },
      "id": "1",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 2,
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "value": 3,
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 4,
        },
      },
      "id": "4",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > filters logs by experiment name (csv) 1`] = `
"type,run_name,run_status,value
log-type,log-test-run,running,1
test-type,log-test-run,running,2
log-type,other-run-1,running,3
test-type,other-run-1,running,4
"
`;

exports[`LogServer: get /logs (sqlite) > filters logs by experiment name (json) 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "value": 1,
        },
      },
      "id": "1",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 2,
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "value": 3,
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 4,
        },
      },
      "id": "4",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > filters logs by run id (csv) 1`] = `
"type,experiment_name,run_name,run_status,value
log-type,log-test-experiment,other-run-1,running,3
test-type,log-test-experiment,other-run-1,running,4
"
`;

exports[`LogServer: get /logs (sqlite) > filters logs by run id (json) 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "value": 3,
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 4,
        },
      },
      "id": "4",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > filters logs by run name (csv) 1`] = `
"type,experiment_name,run_status,value
log-type,log-test-experiment,running,1
test-type,log-test-experiment,running,2
test-type,test-experiment,running,5
log-type,test-experiment,running,6
"
`;

exports[`LogServer: get /logs (sqlite) > filters logs by run name (json) 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "value": 1,
        },
      },
      "id": "1",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 2,
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 1,
        "values": {
          "value": 5,
        },
      },
      "id": "5",
      "relationships": {
        "run": {
          "data": {
            "id": "4",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "value": 6,
        },
      },
      "id": "6",
      "relationships": {
        "run": {
          "data": {
            "id": "4",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > filters logs by run name, type, and experiment name (csv) 1`] = `{}`;

exports[`LogServer: get /logs (sqlite) > filters logs by run name, type, and experiment name (json) 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 2,
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > filters logs by type (csv) 1`] = `
"experiment_name,run_name,run_status,value
log-test-experiment,log-test-run,running,2
log-test-experiment,other-run-1,running,4
test-experiment,log-test-run,running,5
test-experiment,other-run-2,running,7
"
`;

exports[`LogServer: get /logs (sqlite) > filters logs by type (json) 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 2,
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 2,
        "values": {
          "value": 4,
        },
      },
      "id": "4",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 1,
        "values": {
          "value": 5,
        },
      },
      "id": "5",
      "relationships": {
        "run": {
          "data": {
            "id": "4",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "test-type",
        "number": 1,
        "values": {
          "value": 7,
        },
      },
      "id": "7",
      "relationships": {
        "run": {
          "data": {
            "id": "5",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > returns logs as csv by default 1`] = `
"type,experiment_name,run_name,run_status,x,y
log-type,test-experiment,other-run,running,x4,y4
log-type,test-experiment,other-run,running,x5,y5
log-type,test-experiment,test-run,running,x1,y1
log-type,test-experiment,test-run,running,x2,y2
log-type,test-experiment,test-run,running,x3,y3
"
`;

exports[`LogServer: get /logs (sqlite) > returns logs as csv if csv is the first supported format in the Accept header 1`] = `
"type,experiment_name,run_name,run_status,x,y
log-type,test-experiment,other-run,running,x4,y4
log-type,test-experiment,other-run,running,x5,y5
log-type,test-experiment,test-run,running,x1,y1
log-type,test-experiment,test-run,running,x2,y2
log-type,test-experiment,test-run,running,x3,y3
"
`;

exports[`LogServer: get /logs (sqlite) > returns logs as json if json is the first supported format in the Accept header 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "x": "x4",
          "y": "y4",
        },
      },
      "id": "4",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "x": "x5",
          "y": "y5",
        },
      },
      "id": "5",
      "relationships": {
        "run": {
          "data": {
            "id": "2",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "x": "x1",
          "y": "y1",
        },
      },
      "id": "1",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "x": "x2",
          "y": "y2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 3,
        "values": {
          "x": "x3",
          "y": "y3",
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /logs (sqlite) > returns only logs a participant has access to 1`] = `
{
  "data": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "x": "x1",
          "y": "y1",
        },
      },
      "id": "1",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "x": "x2",
          "y": "y2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 3,
        "values": {
          "x": "x3",
          "y": "y3",
        },
      },
      "id": "3",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;
